--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,8 +2,7 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  position: absolute;
-  top: 0;
+  position: relative;
   width: 100%;
   background-color: rgba(128, 128, 128, 0.561);
   height: 100px;
