--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  background-color: rgba(128, 128, 128, 0.561);
+  /* background-color: rgba(128, 128, 128, 0.561); */
   height: 100px;
 }
 
