--- a/src/components/shopItems/ShopItems.css
+++ b/src/components/shopItems/ShopItems.css
@@ -1,8 +1,8 @@
 .Items {
-  position: absolute;
+  align-self: center !important;
   flex-grow: 1;
   justify-content: center;
   width: 87% !important;
-  right: 0;
+  min-width: 800px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19);
 }
