--- a/src/components/watchModal/WatchModal.css
+++ b/src/components/watchModal/WatchModal.css
@@ -4,8 +4,13 @@
   width: fit-content !important;
   height: fit-content !important;
   background-color: white !important;
+  width: 80vw !important;
+  height: 80vh !important;
 }
 .ant-modal-body {
   display: flex;
   justify-content: center;
+  width: 80vw !important;
+  height: 80vh !important;
+  margin: 5%;
 }
